[gd_scene load_steps=2 format=3 uid="uid://dptamh04yqugv"]

[ext_resource type="Script" path="res://village/scripts/VillageStatusUI.gd" id="1_8xnu1"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="VillageStatusUI" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -382.5
offset_right = 382.5
offset_bottom = 43.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_8xnu1")

[node name="StatusVBox" type="HBoxContainer" parent="VillageStatusUI"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GoldLabel" type="Label" parent="VillageStatusUI/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Altın: -"

[node name="VSeparator8" type="VSeparator" parent="VillageStatusUI/StatusVBox"]
layout_mode = 2

[node name="WorkerLabel" type="Label" parent="VillageStatusUI/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "İşçiler: - / -"

[node name="VSeparator" type="VSeparator" parent="VillageStatusUI/StatusVBox"]
layout_mode = 2

[node name="AskerLabel" type="Label" parent="VillageStatusUI/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Asker: -"

[node name="VSeparator2" type="VSeparator" parent="VillageStatusUI/StatusVBox"]
layout_mode = 2

[node name="WoodLabel" type="Label" parent="VillageStatusUI/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Odun: - (-)"

[node name="VSeparator3" type="VSeparator" parent="VillageStatusUI/StatusVBox"]
layout_mode = 2

[node name="StoneLabel" type="Label" parent="VillageStatusUI/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Taş: - (-)"

[node name="VSeparator4" type="VSeparator" parent="VillageStatusUI/StatusVBox"]
layout_mode = 2

[node name="FoodLabel" type="Label" parent="VillageStatusUI/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Yiyecek: - (-)"

[node name="VSeparator5" type="VSeparator" parent="VillageStatusUI/StatusVBox"]
layout_mode = 2

[node name="WaterLabel" type="Label" parent="VillageStatusUI/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Su: - (-)"

[node name="VSeparator6" type="VSeparator" parent="VillageStatusUI/StatusVBox"]
layout_mode = 2

[node name="MetalLabel" type="Label" parent="VillageStatusUI/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Metal: - (-)"

[node name="VSeparator7" type="VSeparator" parent="VillageStatusUI/StatusVBox"]
layout_mode = 2

[node name="BreadLabel" type="Label" parent="VillageStatusUI/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Ekmek: - (-)"
